--- a/files/.tmux.conf
+++ b/files/.tmux.conf
@@ -1,1 +1,8 @@
 setw -g mode-keys vi
+
+set -g terminal-overrides 'xterm:colors=256'
+set-option -g default-terminal screen-256color
+
+bind -T copy-mode-vi v send -X begin-selection
+bind -T copy-mode-vi y send -X copy-selection
+bind-key C-p paste-buffer
