--- a/config/.vscode/settings.json
+++ b/config/.vscode/settings.json
@@ -139,5 +139,10 @@
     "workbench.editor.editorActionsLocation": "titleBar",
     "workbench.editor.empty.hint": "hidden",
     "workbench.iconTheme": "file-icons-colourless",
-    "workbench.startupEditor": "none"
+    "workbench.startupEditor": "none",
+    "zenMode.fullScreen": false,
+    "zenMode.hideActivityBar": false,
+    "zenMode.hideLineNumbers": false,
+    "zenMode.hideStatusBar": false,
+    "zenMode.silentNotifications": false
 }
